@@ -18,7 +18,7 @@ lib.dir=lib
 
 ## compile settings
 ##	      -should debug info be generated for compile of source...do not do this to true in production
-compile.with.debug=true
+compile.with.debug=false
 
 ## output directories
 ##    NOTE: build dir was bin in 2.0.5, shift over to 'target' as we move towards a maven layout
